--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AwesomeProject",
+  "name": "leppi",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -20,7 +20,7 @@
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
+    "metro-react-native-babel-preset": "^0.56.3",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
